RESOLVED FIXED139099
Crash when calling WKPageClose on the originated page from within createNewPage callback
https://bugs.webkit.org/show_bug.cgi?id=139099
Summary Crash when calling WKPageClose on the originated page from within createNewPa...
Anders Carlsson
Reported 2014-11-29 11:52:50 PST
Crash when calling WKPageClose on the originated page from within createNewPage callback
Attachments
Patch (16.71 KB, patch)
2014-11-29 11:56 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2014-11-29 11:56:58 PST
Anders Carlsson
Comment 2 2014-11-29 13:12:31 PST
Note You need to log in before you can comment on or make changes to this bug.