Crash when calling WKPageClose on the originated page from within createNewPage callback https://bugs.webkit.org/show_bug.cgi?id=139099 <rdar://problem/19052564>

Reviewed by Sam Weinig.

Source/WebKit2:

Null check the namespace ID.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::cloneSessionStorageNamespaceInternal):

Tools:

Add a test.

* TestWebKitAPI/PlatformWebView.h:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2/CloseFromWithinCreatePage.cpp: Added.
(TestWebKitAPI::runJavaScriptAlert):
(TestWebKitAPI::createNewPage):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit2/close-from-within-create-page.html: Added.
* TestWebKitAPI/mac/PlatformWebViewMac.mm:
(TestWebKitAPI::PlatformWebView::PlatformWebView):

Canonical link: https://commits.webkit.org/156953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176574 268f45cc-cd09-0410-ab3c-d52691b4dbfc