Tools/TestWebKitAPI/mac/PlatformWebViewMac.mm
@@ -60,6 +60,21 @@ PlatformWebView::PlatformWebView(WKContextRef contextRef, WKPageGroupRef pageGro
     [m_window setReleasedWhenClosed:NO];
 }
 
+PlatformWebView::PlatformWebView(WKPageRef relatedPage)
+{
+    NSRect rect = NSMakeRect(0, 0, 800, 600);
+    m_view = [[WKView alloc] initWithFrame:rect contextRef:WKPageGetContext(relatedPage) pageGroupRef:WKPageGetPageGroup(relatedPage) relatedToPage:relatedPage];
+    [m_view setWindowOcclusionDetectionEnabled:NO];
+
+    NSRect windowRect = NSOffsetRect(rect, -10000, [(NSScreen *)[[NSScreen screens] objectAtIndex:0] frame].size.height - rect.size.height + 10000);
+    m_window = [[ActiveOffscreenWindow alloc] initWithContentRect:windowRect styleMask:NSBorderlessWindowMask backing:NSBackingStoreBuffered defer:YES];
+    [m_window setColorSpace:[[NSScreen mainScreen] colorSpace]];
+    [[m_window contentView] addSubview:m_view];
+    [m_window orderBack:nil];
+    [m_window setAutodisplay:NO];
+    [m_window setReleasedWhenClosed:NO];
+}
+
 PlatformWebView::~PlatformWebView()
 {
     [m_window close];
